--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/cganzon/Google-Books-Search/issues"
   },
-  "homepage": "https://github.com/cganzon/Google-Books-Search#readme"
+  "homepage": "https://github.com/cganzon/Google-Books-Search#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.5.4"
+  }
 }
